HDPI-5687 Tidy code